feat: adiciona campos icone e progress nas culturas, novo dialog de edicao e novos icones de frutas